--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1585,107 +1585,107 @@ stories:
   domain: http://www.jacksonvilleprogress.com/
   link: https://www.jacksonvilleprogress.com/region/winning-numbers-drawn-in-mega-millions-game/article_603e713e-90f9-5bae-b1bf-989529e55b2c.html
 images:
-- name: old-door-lock-old-door-lock-2-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-atari-missle.jpg
-- name: stories-oldgaspumps-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-oldgaspumps-umberto-bocc.jpg
-- name: store-on-corner-store-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-wols.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
-- name: rockingchair-rockingchair-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-electricity.jpg
-- name: windowmountain-window-mountain-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dali-two.jpg
-- name: subway-subway-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-pablo-blue.jpg
-- name: hollywood-building-hollywood-building-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-feed-people.jpg
-- name: copper-circuit-volkswagon-microbus-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-volkswagon-microbus-windows.jpg
-- name: copper-circuit-border-down-the-fence-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-down-the-fence-line.jpg
-- name: border-fence-border-fence-on-hill-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smooth-ride.jpg
-- name: birdhouse-birdhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-yellow-collage.jpg
-- name: border-crossing-bordercrossing-clean-view.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-clean-view.png
-- name: christianity-christianity-under-construction-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-feed-people.jpg
-- name: flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
-- name: old-granary-field-granaryfield-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-internet-numbers.jpg
-- name: bluelake-dark-rain-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-00-00-00.jpg
-- name: amusement-park-amusement-park-2-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-post-modern.jpg
-- name: legal-statue-legalstatue-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-plentiful.jpg
-- name: old-cabin-oldcabin-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-nazi-poster.jpg
-- name: server-racks-door-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-dark-dali.jpg
-- name: nazi-invasion-train-tracks-bending.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-tracks-bending.jpg
-- name: aws-s3-square-old-yellow-house-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-yellow-house-square.jpg
-- name: dc-statue-dcstatue-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-space-pizza.jpg
-- name: rain-princess-capital_36728420065_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-capital_36728420065_o.jpg
-- name: aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit.jpg
-- name: statue-of-liberty-front-view-statueofliberty-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-smoking-cigarette.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit.JPG
-- name: window-window-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-electricity.jpg
-- name: sand-hand-sand-hand-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-emily-carr.jpg
-- name: stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
-- name: adam-smith-adam-smith-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-matrix.jpg
-- name: downtown-la-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-copper-circuit.JPG
-- name: hollywood-building-hollywood-building-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-far-away.jpg
-- name: aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-- name: meadowbutterfly-meadow-butterfly-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-emily-carr.jpg
-- name: oldhousecars-house-old-cars-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crafty-painting.jpg
-- name: la-muse-ellis-island-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-ellis-island-windows.jpg
-- name: dragon-desert-desert-dragon-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dali-three.jpg
-- name: berlinwall-DSC-0084-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-smooth-ride.jpg
-- name: downtown-los-angeles-downtown-la-creativity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-creativity.JPG
-- name: old-granary-field-granaryfield-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-matrix.jpg
-- name: old-cabin-oldcabin-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-missle.jpg
-- name: nazi-invasion-IMG_6170.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6170.jpg
-- name: old-house-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
-- name: bf-skinner-steam-engine-iceland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-steam-engine-iceland.jpg
-- name: supreme-court-supremecourt-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-matrix.jpg
-- name: downtown-la-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-diego-rivera1.JPG
-- name: oldcabin-store-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-bright-sand.jpg
-- name: paris-paris-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-space-pizza.jpg
+- name: ellis-island-ellisisland-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-blocks.jpg
+- name: windowmountain-window-mountain-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-really-hot.jpg
+- name: oldsmallboat-oldsmallboat-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-aqua.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+- name: server-cloud-server-racks-clouds-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-jap-wav-pr.jpg
+- name: bf-skinner-old-barn-falling-over.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-barn-falling-over.jpg
+- name: udnie-IMG_6950.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6950.jpg
+- name: aws-s3-stories-algo-microservices.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-algo-microservices.jpg
+- name: oldhotel-oldhotel-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-nazi-poster.jpg
+- name: oldhotel-oldhotel-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-granite.jpg
+- name: meadowbutterfly-meadow-butterfly-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-ww2-color.jpg
+- name: white-house-lawn-white-house-window-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-hot-spicy.jpg
+- name: curtain-curtain-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
+- name: gypsymosaic-gypsy-eyes-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-soul.jpg
+- name: supreme-court-supremecourt-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kand-two.jpg
+- name: legal-statue-legalstatue-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-rain.jpg
+- name: art-museum-art-museum-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-copper-circuit.jpg
+- name: castle-wall-DSC-0067-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-post-modern.JPG
+- name: rockingchair-rockingchair-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-alberto-giacometti.jpg
+- name: server-cloud-server-racks-door-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-hot-spicy.jpg
+- name: server-cloud-server-racks-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-oily-mcoilface.jpg
+- name: aws-s3-tunnel-tunnel-purp-paper-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still-600.jpg
+- name: birdhouse-birdhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-soul.jpg
+- name: la-muse-border-crossing-through-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-border-crossing-through-fence.jpg
+- name: gypsymosaic-gypsy-eyes-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dali-two.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
+- name: crow_nazi_poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_nazi_poster.jpg
+- name: old-house-oldhouse-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dark-rain.jpg
+- name: copper-circuit-eiphel-tower-paris-brown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-eiphel-tower-paris-brown.jpg
+- name: bf-skinner-small-town-street-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-small-town-street-2.jpg
+- name: windowmountain-window-mountain-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purple-storm.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
+- name: catacombs-catacombs-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-5.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
+- name: power-lines-power-lines-empty-space-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-propaganda-leaflets.jpg
+- name: old-door-lock-old-door-lock-2-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-blocks.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
+- name: stories-downtheline-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtheline-dali-three.jpg
+- name: castle-wall-DSC-0067-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-matrix.JPG
+- name: liberty-back-statue-liberty-back-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-blue-brush.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
+- name: docks-docks-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-mucha-mult.jpg
+- name: cargo-ship-cargo-ship-on-sea-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-mucha-mult.jpg
+- name: containership-containership-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-propaganda-leaflets.jpg
+- name: old-church-oldchurch-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-oily-mcoilface.jpg
+- name: oldhouse-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
+- name: aws-s3-square-64-176-800-500-0-max-0--1--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1-square.jpg
+- name: oldbarn-oldbarn-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-constitution.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sunday.jpg
+- name: status-berlin-status-berlin-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-nazi-poster.jpg
+- name: fence-mexico-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-circuit.jpg
 ---
 Bankruptcy Judge Thrust Into Spotlight In Purdue Pharma Case.&nbsp;Renovation Recommended For Westside Elementary.&nbsp;Pictures Of The Week Photo Gallery.&nbsp;Two Dead In Shootings At Family Express Near Lafayette.&nbsp;'SNL' Alum Revives Iconic Character, And Anderson Loses It.&nbsp;Fortepian I Jego Noworoczna Muzyka.&nbsp;Man Falls From Lift At Steamboat Resort After Medical Incident.&nbsp;What To Eat To Recover From Your Holiday Overindulgence.&nbsp;
